# issue-deadline-manager

./: .eslintrc.json  .gitignore  .prettierrc.json  Cargo.toml  Dockerfile  README.md  action.yml  package-lock.json  package.json  renovate.json
.github/workflows/: action_lint.yml  actions.yml  build_image.yml  ci.yml  hadolint.yml  selftest.yml  test.yml  validate-renovate.yml
__tests__/: determineLabel.test.ts  parseIssue.test.ts
src/: label.rs  label.ts  lib.rs  main.ts  parse.rs  parse.ts  runner.rs
