[package]
name = "issue-deadline-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.0"
octocrab = "0.13.0"
thiserror = "1.0.30"
tokio = { version = "1.13.1", features = ["rt-multi-thread", "macros"] }

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

